--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -35,12 +35,20 @@ a {
   color: white;
   font-size: 60px;
   line-height: 1.2;
+  opacity: 0;
+  animation: HeroAnimation;
+  animation-duration: 3s;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .Hero p {
   font-size: 30px;
   line-height: 1.5;
   color: rgba(255,255,255, 0.8);
+  opacity: 0;
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .Hero a {
@@ -52,6 +60,12 @@ a {
   padding: 9px 20px;
   border: 1px solid rgba(255,255,255, 0.25);
   border-radius: 20px;
+  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.Hero a:hover {
+  background: white;
+  color: black;
 }
 
 @media (max-width: 640px) {
